# guidance-for-deploying-sap-abap-accelerator-for-amazon-q-developer

./: .dockerignore  .gitattributes  .gitignore  CHANGES.md  Dockerfile.simple  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
.kiro/steering/: product.md  structure.md  tech.md
assets/: abap-accelerator-q-3.2.0-node22.tar  abap-accelerator-q-3.2.1-node22.tar
changes/: 2026-03-08-better-docker.md  README.md
scripts/: render_templates.py
src/: docker-entrypoint.sh
src/aws_abap_accelerator/: __init__.py  enterprise_main.py  enterprise_main_tools.py  health_check.py  main.py
src/aws_abap_accelerator/auth/: __init__.py  iam_identity_validator.py  integration.py  keychain_manager.py  mcp_tools.py  multi_system_manager.py  principal_propagation.py  principal_propagation_middleware.py  sap_auth_helper.py  sap_client_factory.py  session_manager.py  types.py
src/aws_abap_accelerator/config/: settings.py
src/aws_abap_accelerator/enterprise/: __init__.py  context_manager.py  middleware.py  sap_client_factory.py  usage_tracker.py
src/aws_abap_accelerator/sap/: __init__.py  behavior_definition_handler.py  cds_handler.py  class_handler.py  sap_client.py  service_binding_handler.py  service_definition_handler.py
src/aws_abap_accelerator/sap_types/: __init__.py  sap_types.py
src/aws_abap_accelerator/server/: fastmcp_oauth_integration.py  fastmcp_server.py  health.py  middleware.py  oauth_callback.py  oauth_helpers.py  oauth_manager.py  oidc_discovery.py  tool_handlers.py
src/aws_abap_accelerator/utils/: logger.py  security.py  (+4 more)
(+11 files in other folders)
